Add period and prediction integration test